# snapshotgate

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
scripts/: demo.sh
src/snapshotgate/: cli.py  contract.py  io.py  profiler.py  report.py  utils.py  validate.py
src/snapshotgate/templates/: report.html
tests/: test_smoke.py
